test/apps/errors/src/routes/throw.json.js
export function get(req, res) {
	throw new Error('oops');
}